# mygos

./: .gitignore  CMakeLists.txt  Makefile  README.md  anime.asm  boot.asm  io.c  io.h  kput.S  link_script_riscv.ld  linker.ld  my_string.c  my_string.h  os.ld  riscv.cmake  riscv.md  start.S  todo.md
include/: endian.h  io.h  list.h  list_b.h  lock.h  memory.h  mygos.h  os.h  platform.h  riscv.h  task.h  timer.h  typedefs.h  types.h  utils.h
src/: entry.S  io.c  kernel.c  kput.S  lock.c  main.S  main.c  mem.S  my_string.c  my_string.h  page.c  riscv.c  sched.c  start.S  timer.c  trap.c  user.c
src/algs/: kmath.h  kstring.c  kstring.h  math.c
src/device_tree/: device_tree_parser.c  device_tree_parser.h
src/io/: get_input.c  io.c  io.h  plic.c  plic.h  printf.c  printk.c  trap_handler.c  uart.c  uart.h
src/lock/: lock.S  lock.c  spin_lock.c
src/mem/: kmemory.c  kmemory.h  page.c  page.h
src/memanagement/: Makefile  kernel.c  os.h  os.ld  page.c  platform.h  printf.c  start.S  uart.c
src/memory/: memory.S  page.c  print_info.c
src/print/: printf.c  uart.c
src/task/: sched.c  task.c  trap_handler.c
src/tasks/: count.c  input.c  tasks.c  timer.c
src/timer/: interrupt_handler.c  timer.c  trap_handler.c
src/trap/: entry.S  trap.c  trap_handler.c
src/user_tasks/: count.c  input.c  tasks.c  timer.c  user_tasks.c
